starlark-rust/starlark/src/typing/tests/golden/call_pos_only.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Code:
def f(x, /):
    pass

def test():
    f("good")
    f(x="bad")

Error:
error: Unexpected parameter named `x`
 --> filename:7:7
  |
7 |     f(x="bad")
  |       ^^^^^^^
  |

Compiler typechecker (eval):
error: Unexpected parameter named `x`
 --> filename:7:7
  |
7 |     f(x="bad")
  |       ^^^^^^^
  |
